[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["ArtemMor <moruginartem99@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
motor = "^3.4.0"
uvicorn = "^0.29.0"
ipython = "^8.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
